[package]
name = "routerify-cors"
version = "1.1.0"
description = "A Routerify middleware which enables CORS."
homepage = "https://github.com/routerify/routerify-cors"
repository = "https://github.com/routerify/routerify-cors"
keywords = ["routerify", "hyper", "hyper-rs", "cors", "middleware"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
routerify = "1.1"
hyper = "0.13"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
stream-body = "0.1"