[package]
name = "routerify-cors"
version = "2.0.0"
description = "A Routerify middleware which enables CORS."
homepage = "https://github.com/routerify/routerify-cors"
repository = "https://github.com/routerify/routerify-cors"
keywords = ["routerify", "hyper", "hyper-rs", "cors", "middleware"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
routerify = "2"
hyper = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
